# robot_fleet

./: .gitignore  readme.md
src/project_controller/: CMakeLists.txt  package.xml
src/project_controller/config/: nav2_params.yaml  nav2_params_robot2.yaml  project_controllers.yaml
src/project_controller/launch/: controller.launch.py  navigation_custom_launch.py
src/project_controller/maps/: nasz_swiat(2).pgm  nasz_swiat.pgm  nasz_swiat.yaml  real_sala424.pgm
src/project_controller/project_controller/: dynamic_path_controller.py  main_controller.py  navigation_controller.py  odometry_controller.py  path_controller.py
src/project_description/: CMakeLists.txt  package.xml
src/project_description/launch/: gazebo.launch.py  world.launch.py
src/project_description/rviz/: display.rviz  master.rviz  robot.rviz
src/project_description/urdf/: lidar.xacro  project.urdf.xacro  project_gazebo.xacro  project_ros2_control.xacro  realny.urdf.xacro  realsense_camera.xacro
src/project_description/worlds/: swiat.sdf
src/project_localization/: CMakeLists.txt  package.xml
src/project_localization/config/: ekf.yaml  ekf_robot1.yaml  ekf_robot2.yaml  nav2_params.yaml
src/project_localization/launch/: local_localization.launch.py  localization_launch.py  nav_launch.py
src/project_localization/project_localization/: imu_republisher.py  kalman_filter.py
src/project_master/: CMakeLists.txt  package.xml
src/project_master/launch/: master.launch.py
src/project_master/project_master/: connection_test.py  master.py  master2.py  stan_publisher.py  stan_subscriber.py
(+12 files in other folders)
